核心插件重构进度30%

--- a/components/editor/gaea-editor/gaea-editor-core/components/global-setting/global-setting.scss
+++ b/components/editor/gaea-editor/gaea-editor-core/components/global-setting/global-setting.scss
@@ -1,10 +1,14 @@
 &.modal {
     .row {
         display: flex;
+        justify-content: space-between;
     }
-    .col {
+    .col, .col-right {
         display: flex;
         flex-grow: 1;
         width: 0;
+    }
+    .col-right {
+        justify-content: flex-end;
     }
 }
