--- a/components/editor/gaea-editor/gaea-editor/panel/edit-box/basic/basic.scss
+++ b/components/editor/gaea-editor/gaea-editor/panel/edit-box/basic/basic.scss
@@ -141,3 +141,29 @@
     border-bottom: 1px solid #eee;
     margin-bottom: 5px;
 }
+
+// svg 图标
+.svg-icon {
+    width: 20px;
+    height: 20px;
+}
+
+.rotate-45 {
+    transform: rotate(45deg);
+}
+
+.rotate-90 {
+    transform: rotate(90deg);
+}
+
+.rotate-135 {
+    transform: rotate(135deg);
+}
+
+.rotate-180 {
+    transform: rotate(180deg);
+}
+
+.rotate-270 {
+    transform: rotate(270deg);
+}
