--- a/client/layout/layout.scss
+++ b/client/layout/layout.scss
@@ -66,7 +66,7 @@
         background-color: #b137aa;
     }
     &.designer {
-        background-color: #573297;
+        background-color: #653ab1;
     }
 }
 
