--- a/components/editor/gaea-editor/gaea-editor-core/components/editor-tabs-attribute/editor-tabs-attribute.scss
+++ b/components/editor/gaea-editor/gaea-editor-core/components/editor-tabs-attribute/editor-tabs-attribute.scss
@@ -46,3 +46,10 @@
         }
     }
 }
+
+.title {
+    background-color: whitesmoke;
+    padding: 10px;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+}
