--- a/components/editor/gaea-editor/lib/gaea-editor/panel/edit-box/basic/basic.css
+++ b/components/editor/gaea-editor/lib/gaea-editor/panel/edit-box/basic/basic.css
@@ -144,3 +144,27 @@
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
   margin-bottom: 5px; }
+
+.nt-editor-gaea-editor-gaea_editor-panel-edit_box-basic .svg-icon {
+  width: 20px;
+  height: 20px; }
+
+.nt-editor-gaea-editor-gaea_editor-panel-edit_box-basic .rotate-45 {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg); }
+
+.nt-editor-gaea-editor-gaea_editor-panel-edit_box-basic .rotate-90 {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg); }
+
+.nt-editor-gaea-editor-gaea_editor-panel-edit_box-basic .rotate-135 {
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg); }
+
+.nt-editor-gaea-editor-gaea_editor-panel-edit_box-basic .rotate-180 {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg); }
+
+.nt-editor-gaea-editor-gaea_editor-panel-edit_box-basic .rotate-270 {
+  -webkit-transform: rotate(270deg);
+          transform: rotate(270deg); }
