--- a/components/editor/gaea-editor/lib/gaea-editor-core/components/editor-attribute-font/editor-attribute-font.css
+++ b/components/editor/gaea-editor/lib/gaea-editor-core/components/editor-attribute-font/editor-attribute-font.css
@@ -1,3 +1,6 @@
+.nt-editor-gaea-editor-gaea_editor_core-components-editor_attribute_font {
+  padding: 10px; }
+
 .nt-editor-gaea-editor-gaea_editor_core-components-editor_attribute_font .row-container {
   display: -webkit-box;
   display: -ms-flexbox;
